[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/x-pack/plugins/translations/tsconfig.json
+++ b/x-pack/plugins/translations/tsconfig.json
@@ -4,7 +4,9 @@
     "outDir": "target/types",
   },
   "include": ["server/**/*", "translations/ja-JP.json", "translations/zh-CN.json"],
-  "kbn_references": [],
+  "kbn_references": [
+    "@kbn/core",
+  ],
   "exclude": [
     "target/**/*",
   ]
