--- a/dev_docs/tutorials/performance/adding_custom_performance_metrics.mdx
+++ b/dev_docs/tutorials/performance/adding_custom_performance_metrics.mdx
@@ -241,7 +241,7 @@ const MyApp = () => {
       if (fetchedData.status === 'success') {
       setData(fetchedData);
 
-      // Call onPageReady once the meaningful data has been fetched
+      // Call onPageReady once the meaningful data has rendered and visible to the user 
 
         onPageReady();
       }
