--- a/docs/management/connectors/action-types/obs-ai-assistant.asciidoc
+++ b/docs/management/connectors/action-types/obs-ai-assistant.asciidoc
@@ -18,10 +18,7 @@ To learn how to interact with the assistant through this connector, refer to the
 [[define-obs-ai-assistant-ui]]
 === Create connectors in {kib}
 
-To use this connector you must have the `api:observabilityAIAssistant` and `app:observabilityAIAssistant` privileges.
-
-//TODO: Add link to docs that describe how to define these privileges.
-
+To use this connector, you must have been granted access to use the Observability AI Assistant feature.
 You cannot manage this connector in *{stack-manage-app} > {connectors-ui}* or by using APIs.
 You also cannot create an Observability AI Assistant <<pre-configured-connectors,preconfigured connector>>.
 It is available only when you're creating a rule in {kib}.
@@ -29,7 +26,6 @@ For example:
 
 [role="screenshot"]
 image::management/connectors/images/obs-ai-assistant-action.png[Add an Observability AI Assistant action while creating a rule in the Observability UI]
-//TODO: Check with Lisa to see if we can autogenerate this screen capture.
 
 NOTE: You can have only one Observability AI Assistant action in each rule.
 
