--- a/docs/developer/plugin-list.asciidoc
+++ b/docs/developer/plugin-list.asciidoc
@@ -102,7 +102,7 @@ This API doesn't support angular, for registering angular dev tools, bootstrap a
 |Embeddables are React components that manage their own state, can be serialized and deserialized, and return an API that can be used to interact with them imperatively.
 
 
-|{kib-repo}blob/{branch}/src/plugins/esql_datatable/README.md[esqlDatatable]
+|{kib-repo}blob/{branch}/src/plugins/esql_datagrid/README.md[esqlDataGrid]
 |Contains a Discover-like table specifically for ES|QL queries:
 
 
