--- a/dev_docs/key_concepts/encrypted_saved_objects.mdx
+++ b/dev_docs/key_concepts/encrypted_saved_objects.mdx
@@ -7,12 +7,17 @@ date: 2024-05-21
 tags: ['kibana', 'dev', 'contributor', 'api docs']
 ---
 
+## Overview
+
 "Encrypted Saved Objects" (ESO) are <DocLink id="kibDevDocsSavedObjectsIntro" text="Saved Object types" /> that have been registered with the Encrypted Saved Objects
-Service (ESO Service) to the specify which attributes should be protected (encrypted attributes) and which attributes, if any, should be present and unchanged
+Service (ESO Service) to specify which attributes should be protected (encrypted attributes) and which attributes, if any, should be present and unchanged
 in order to decrypt the protected attributes ("Additional Authenticated Data", or AAD).
 
 The ESO Service encrypts ESOs with the Encrypted Saved Object encryption key, a Kibana configuration setting. This setting must have a valid value for the ESO Service
-to function. For more details see [Secure saved objects](https://www.elastic.co/guide/en/kibana/current/xpack-security-secure-saved-objects.html).
+to function. For more details see [Secure saved objects](https://www.elastic.co/guide/en/kibana/current/xpack-security-secure-saved-objects.html). When running in a
+development environment, Kibana is always automatically configured with a static ESO encryption key of "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa".
+As the the ESO encryption key is an optional setting, developers should rely on the `canEncrypt` function exposed by the ESO Plugin to decide whether they should
+gracefully degrade any functionality dependent on ESOs, or reject functioning entirely.
 
 Developers create and manage their Encrypted Saved Object types programmatically. This document will cover the basics.
 
@@ -23,9 +28,9 @@ Developers create and manage their Encrypted Saved Object types programmatically
 Most Saved Object types do not need to be registered as an encrypted type. Only register a Saved Object type with the ESO service if it contains sensitive
 information. What sort of information is considered sensitive? Here is a non-inclusive list to help you make a determination:
 
-- Authentication data: usernames, passwords, API or access keys, private endpoints
-- Personal information: social security numbers or equivalent, back account or credit card numbers
-- ToDo: what else?
+- Credentials: usernames, passwords, API keys, access keys
+- Personally identifiable information (PII): social security numbers or equivalent, back routing numbers, credit card numbers
+- Other sensative information: private endpoints, secrets, etc.
 
 When in doubt, consult with the Kibana Security team (Application Experience/Platform Services/Security).
 
@@ -43,9 +48,17 @@ object that defines how the object should be encrypted.
 ```
 
 `attributesToEncrypt` can be defined by either a string matching the name of the attribute, or an `AttributeToEncrypt` object, which enables you to specify when
-an attribute's value should be allowed to be "dangerously exposed". By default, attribute values will not be exposed to end users, and can only be consumed by the
-internal Kibana server. If end users must have access to the encrypted values, register the encrypted attribute with a `attributesToEncrypt` object and use
-`dangerouslyExposeValue: true`.
+an attribute's value should be allowed to be "dangerously exposed". There are generally three use cases to consider regarding the accessing of encrypted values:
+
+1. By default, when ESOs are retrieved with any "standard" Saved Object Client APIs (e.g. get, find), decryption does not occur, and instead all encrypted
+attributes are removed from the returned Saved Objects.
+2. As a plugin developer, if you want to access decrypted attributes of ESOs, you should use the dedicated APIs exposed via the Encrypted Saved Objects Client (e.g.
+`getDecryptedAsInternalUser`, `createPointInTimeFinderDecryptedAsInternalUser`). When using these functions, it is assumed that you will only consume decrypted
+attributes internally and will not expose them to end users unless it is absolutely necessary. In this case, these APIs can serve as a way to conditionally expose
+certain decrypted secrets in a controlled manner.
+3. If decrypted attributes should be exposed to anyone who has access to the Saved Object itself, these ESO attributes should be registered with
+`dangerouslyExposeValue: true`. This way, all "standard" Saved Object Client APIs will decrypt these corresponding encrypted attributes and return them to the
+consumer. As the `dangerouslyExposeValue` name implies, the decision to expose decrypted attributes should be thoroughly evaluated and documented.
 
 ### AAD
 
@@ -55,9 +68,8 @@ and must be an exact match to the AAD value used during encryption, otherwise de
 authenticated user and either never changes, or would only potentially change when encrypted values change.
 
 For ESOs, AAD is constructed of key-value pairs composed of the Saved Object Descriptor and any attributes included in `attributesToIncludeInAAD` when the ESO is
-registered. The Saved Object Descriptor consists of the object type, ID, and, if applicable, namespace (or space ID). The descriptor for Space-agnostic types
-(`namespaceType: 'agnostic'`) will not include a namespace, and for multi-namespace types (`namespaceType: 'multiple-isolated'` and `namespaceType: 'multiple'`) will
-only include the first namespace found in the object's list of namespaces.
+registered. The Saved Object Descriptor consists of the object type, ID, and, if applicable, namespace (or space ID). The descriptor for space-agnostic types
+(`namespaceType: 'agnostic'`), and multi-namespace types (`namespaceType: 'multiple-isolated'` and `namespaceType: 'multiple'`), will not include a namespace.
 
 ```ts
   export interface SavedObjectDescriptor {
@@ -66,6 +78,8 @@ only include the first namespace found in the object's list of namespaces.
     readonly namespace?: string;
   }
 ```
+
+Any time an ESO's AAD changes (when any attribute that is included in AAD changes), all encrypted attributes of that ESO must be re-encrypted to account for the new AAD.
 
 #### Nested attributes
 
@@ -102,7 +116,8 @@ should be included.
 
 Partial updates on ESOs are only possible if the changes are limited to unencrypted and non-AAD attributes. Any changes to an ESO's encrypted values or AAD-
 included values requires re-encryption, which means the entire object must be provided when updating to avoid corrupting the object. If an ESO is corrupted by
-a partial update, it will be effectively undecryptable.
+a partial update, it will be effectively undecryptable. Currently, there is nothing preventing or limiting partial updates of ESOs (see open GitHub issue
+[50256](https://github.com/elastic/kibana/issues/50256)), so this requires consistent diligence from developers utilizing ESOs.
 
 ### Migrations, Backward compatibility, and Serverless
 
@@ -130,17 +145,17 @@ Model Version have been completed. All of the Model Version transform functions 
 transform function for efficiency. This way, each ESO only needs to be decrypted and re-encrypted once to incorporate all of the changes defined in a Model Version.
 The optional `shouldTransformIfDecryptionFails` parameter defines whether an ESO type should proceed with the Model Version changes even if decryption fails.
 
-Some examples of `createModelVersion` can be found in the ESO Model Version example plugin (examples/eso_model_version_example/server/plugin.ts) [ToDo: better link?]
+Some examples of `createModelVersion` can be found in the ESO Model Version example plugin (
+[examples/eso_model_version_example/server/plugin.ts](https://github.com/elastic/kibana/blob/06fc22a0f15e692857ba689a7b0ddec91ed2dac2/examples/eso_model_version_example/server/plugin.ts))
 
-For more information regarding Model Versions see the documentation at packages/core/saved-objects/core-saved-objects-server/docs/model_versions.md [ToDo: not sure
-this exists in vercel yet?]
+For more information see our developer documentation for <DocLink id="kibDevTutorialSavedObject" section="defining-model-versions" text="Model Versions"/>.
 
 #### Serverless Considerations
 
 Changes to ESOs must be carefully considered due to how upgrades occur for Serverless projects. In Serverless, there is a "Zero Downtime" (ZDT) upgrade algorithm. This
 means that both the latest and previous versions of Kibana may be running simultaneously. In regard to ESOs, this means that the previous version of Kibana may attempt
 to access ESOs that have been migrated by the latest version of Kibana, and in order to do so, must be able to decrypt them successfully without having any knowledge of
-the new Model Version definition or changes to the ESO's `EncryptedSavedObjectTypeRegistration`. Thus, ff an ESO's AAD has changed due to the migration, the previous
+the new Model Version definition or changes to the ESO's `EncryptedSavedObjectTypeRegistration`. Thus, if an ESO's AAD has changed due to the migration, the previous
 version will not be able to decrypt it. It is critical that when changes are made to an ESO, that they either do not affect its AAD or are staged carefully in
 subsequent Model Versions.
 
@@ -158,13 +173,13 @@ the current and previous version of Kibana. Some of the advice here is applicabl
 | Add a new attribute                          | No         | Yes     | This will require 2 Serverless release stages. `Release 1`: Add the attribute to the ESO's `attributesToIncludeInAAD`. Do not yet populate or use the new attribute. `Release 2`: Implement a Model Version and wrap it in a call to `createModelVersion`, providing the former `EncryptedSavedObjectTypeRegistration` as the input type, and the new `EncryptedSavedObjectTypeRegistration` as the output type. Implement a Model Version `backfill` change as needed. The attribute can safely be populated in this release.                                                                                                                                                                             |
 | Add a new attribute                          | Yes        | N/A     | Implement a Model Version and wrap it in a call to `createModelVersion`. Implement Model Version changes as needed. Implement a `forwardCompatibility` schema and ignore unknowns if the previous version of Kibana will not be able to tolerate additions to the attribute.                                                                                                                                                                                                                                                                                                                                                                                                                               |
 | Add an existing attribute to AAD             | No         | No->Yes | This is not currently supported. Existing attributes that are in use and populated with data cannot be added to AAD. The previous version of Kibana will never be able to successfully perform decryption in this case.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
-| Remove an existing attribute                 | No         | No      | Implement the Model Version as needed. There is no need to wrap the Model Version with `createModelVersion` because AAD is unaffected. If the previous version of will not be able to tolerate the missing attribute, this will require 2 Serverless release stages. `Release 1`: update all business logic to handle this type without the attribute that will be removed. `Release 2`: implement the Model Version as described.                                                                                                                                                                                                                                                                         |
-| Remove an existing attribute                 | No         | Yes     | Implement a Model Version and wrap it in a call to `createModelVersion`, providing the former `EncryptedSavedObjectTypeRegistration` as the input type, and the new `EncryptedSavedObjectTypeRegistration` as the output type. The previous version of Kibana will be able to decrypt objects without this attribute, as attributes that are not present are never included when constructing AAD. If the previous version of Kibana will not be able to tolerate the missing attribute, this will require 2 Serverless release stages. `Release 1`: update all business logic to handle this type without the attribute that will be removed. `Release 2`: implement the Model Version as described.      |
-| Remove an existing attribute                 | Yes        | N/A     | Implement a Model Version as needed. There is no need to wrap the Model Version with `createModelVersion` because AAD is unaffected. The previous version of Kibana will not throw an error if there is a missing encrypted attribute, but will add a debug-level log. If the previous version of will not be able to tolerate the missing attribute, this will require 2 Serverless release stages. `Release 1`: update all business logic to handle this type without the attribute that will be removed. `Release 2`: implement the Model Version as described.                                                                                                                                         |
-| Modify an attribute (add or remove subfield) | No         | No      | Implement a Model Version as needed. There is no need to wrap the Model Version with `createModelVersion` because AAD is unaffected. If the previous version of will not be able to tolerate the changes, this will require 2 Serverless release stages. `Release 1`: update all business logic to handle this type with the modified attribute. `Release 2`: implement the Model Version as described.                                                                                                                                                                                                                                                                                                    |
-| Modify an attribute (add or remove subfield) | No         | Yes     | Implement a Model Version and wrap it in a call to `createModelVersion`, providing the former `EncryptedSavedObjectTypeRegistration` as the input type, and the new `EncryptedSavedObjectTypeRegistration` as the output type. The previous version of Kibana will be able to decrypt objects with the changed attribute, as all subfields are inherent in the value of AAD-included attributes when constructing AAD. If the previous version of Kibana will not be able to tolerate the attribute changes, this will require 2 Serverless release stages. `Release 1`: update all business logic to handle this type with the modified attribute. `Release 2`: implement the Model Version as described. |
-| Modify an attribute (add or remove subfield) | Yes        | N/A     | Implement a Model Version and wrap it in a call to `createModelVersion`. Implement Model Version changes as needed. Even though AAD is unaffected, the objects will require decryption and re-encryption to be modified. If the previous version of will not be able to tolerate the attribute changes, this will require 2 Serverless release stages. `Release 1`: update all business logic to handle this type with the modified attribute. `Release 2`: implement the Model Version as described.                                                                                                                                                                                                      |
-| Change an existing attribute to be encrypted | No->Yes    | No/Yes  | This is not currently supported. The previous version of Kibana will not know to decrypt this attribute, and any business logic that utilizes the attribute will fail.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
+| Remove an existing attribute                 | No         | No      | Implement a Model Version as needed. There is no need to wrap the Model Version with `createModelVersion` because AAD is unaffected. If the previous version of Kibana will not be able to tolerate the missing attribute, this will require 2 Serverless release stages. `Release 1`: update all business logic to handle this type without the attribute that will be removed. `Release 2`: implement a Model Version as described.                                                                                                                                                                                                                                                                         |
+| Remove an existing attribute                 | No         | Yes     | Implement a Model Version and wrap it in a call to `createModelVersion`, providing the former `EncryptedSavedObjectTypeRegistration` as the input type, and the new `EncryptedSavedObjectTypeRegistration` as the output type. The previous version of Kibana will be able to decrypt objects without this attribute, as attributes that are not present are never included when constructing AAD. If the previous version of Kibana will not be able to tolerate the missing attribute, this will require 2 Serverless release stages. `Release 1`: update all business logic to handle this type without the attribute that will be removed. `Release 2`: implement a Model Version as described.      |
+| Remove an existing attribute                 | Yes        | N/A     | Implement a Model Version as needed. There is no need to wrap the Model Version with `createModelVersion` because AAD is unaffected. The previous version of Kibana will not throw an error if there is a missing encrypted attribute, but will add a debug-level log. If the previous version of Kibana will not be able to tolerate the missing attribute, this will require 2 Serverless release stages. `Release 1`: update all business logic to handle this type without the attribute that will be removed. `Release 2`: implement a Model Version as described.                                                                                                                                         |
+| Modify an attribute (add or remove subfield) | No         | No      | Implement a Model Version as needed. There is no need to wrap the Model Version with `createModelVersion` because AAD is unaffected. If the previous version of Kibana will not be able to tolerate the changes, this will require 2 Serverless release stages. `Release 1`: update all business logic to handle this type with the modified attribute. `Release 2`: implement a Model Version as described.                                                                                                                                                                                                                                                                                                    |
+| Modify an attribute (add or remove subfield) | No         | Yes     | Implement a Model Version and wrap it in a call to `createModelVersion`, providing the former `EncryptedSavedObjectTypeRegistration` as the input type, and the new `EncryptedSavedObjectTypeRegistration` as the output type. The previous version of Kibana will be able to decrypt objects with the changed attribute, as all subfields are inherent in the value of AAD-included attributes when constructing AAD. If the previous version of Kibana will not be able to tolerate the attribute changes, this will require 2 Serverless release stages. `Release 1`: update all business logic to handle this type with the modified attribute. `Release 2`: implement a Model Version as described. |
+| Modify an attribute (add or remove subfield) | Yes        | N/A     | Implement a Model Version and wrap it in a call to `createModelVersion`. Implement Model Version changes as needed. Even though AAD is unaffected, the objects will require decryption and re-encryption to be modified. If the previous version of Kibana will not be able to tolerate the attribute changes, this will require 2 Serverless release stages. `Release 1`: update all business logic to handle this type with the modified attribute. `Release 2`: implement a Model Version as described.                                                                                                                                                                                                      |
+| Change an existing attribute to be encrypted | No->Yes    | No/Yes  | This is not currently supported. The previous version of Kibana will not decrypt this attribute, and any business logic that utilizes the attribute will fail.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
 | Remove an attribute from the encrypted list  | Yes->No    | No      | This is not currently supported. The previous version of Kibana will always attempt to decrypt the attribute.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
 
 ## Making Changes
