--- a/docs/user/monitoring/elasticsearch-details.asciidoc
+++ b/docs/user/monitoring/elasticsearch-details.asciidoc
@@ -114,16 +114,22 @@ shows the following information:
 - **Follows**: The name of the leader index.
 - **Alerts**: Any read exceptions that have been triggered for the index or its shards.
 - **Sync Lag (ops)**: How many operations the follower index is lagging behind the leader index. 
-This is calculated by subtracting the delta of `follower_global_checkpoint` from the delta of 
-`leader_max_seq_no` for each shard, and displaying the maximum value.
++
+This is calculated by finding the difference between the minimum and maximum operation sequence number 
+on the leader (`leader_max_seq_no`) and the difference between the minimum and maximum global checkpoint 
+on the follower (`follower_global_checkpoint`) for each shard over the selected time period. The difference 
+in `follower_global_checkpoint` is subtracted from the difference in `leader_max_seq_no` for each shard, 
+and the highest result across all shards is displayed.
 - **Last fetch time**: The time elapsed since the last successful fetch from the leader index. 
 Represents the longest time elapsed across all of the shards in the follower index.
-- **Ops synced**: The number of operations indexed into the follower index from the leader index 
-in the selected time period. This is the sum of the delta between the maximum and minimum number of 
-operations indexed across all of the shards in the follower index during the time period.
-- **Error**: Any exceptions returned for the most recent document in the time period.
+- **Ops synced**: The number of operations indexed (replicated) into the follower index from the leader 
+index in the selected time period. 
++
+This metric is a sum of the number of operations indexed across all shards over the selected time period.
+- **Error**: Any exceptions returned for the most recent document in the selected time period.
 
-For more information on the properties used to calculate these metrics, refer to the {ref}/ccr-get-follow-stats.html[get follower stats API] documentation.
+For more information on the properties used to calculate these metrics, refer to the 
+{ref}/ccr-get-follow-stats.html[get follower stats API] documentation.
 
 If you select a follower index, you can view the same information for each shard.
 
